# PLC-code

./: .replit  README-ada  README-cpp  README-java  README.md  compile-run-c.sh  compile-run-cpp-pre-2015-04-23.sh  compile-run-cpp.sh  compile-run-java.sh
.devcontainer/: Dockerfile  devcontainer.json
block2/: block2.code-workspace
block2/ada/: food-TODO.adb
block2/c/: food-TODO.c
block2/haskell/: Snake.hs  snake.cabal
block2/lisp/: aliasing.lisp  snake-TODO.lisp
lab1-circle/: lab1.code-workspace
lab1-circle/ada/: README-ada  circle.adb
lab1-circle/elm/: circle.elm
lab1-circle/haskell/: Circle.hs  tasks.hs
lab1-circle/java/: CircleFP.java  README-java
lab1-circle/lisp/: included.lisp  tasks.lisp
lab1-intro/ada/: circle.adb
lab1-intro/elm/: README-elm  circle.elm
lab1-intro/haskell/: Circle.hs  intro.cabal  intro.hs  stack.yaml
lab1-intro/java/: Circle.java
lab1-intro/lisp/: circle.lisp  intro.lisp  tasks.lisp
lab1-intro/python/: circle.py
lab2-num/: lab2.code-workspace
lab2-num/ada/: README-ada  compile-run-ada.sh  overflow.adb
lab2-num/haskell/: intervals.hs  lab2-haskell.cabal  nobounds.hs  sqpolyroot.hs
lab2-num/java/: Exp1.java  HugeTiny.java  Overflow.java  compile-run-java.sh
lab2-num/lab2-num/ada/: compile-run-ada.sh  rangetypes.adb
lab2-num/lab2-num/haskell/: Modulo.hs  risingprec.hs
lab2-num/lab2-num/java/: Exp1.java  README-java  Sqpolyroot.java
lab2-num/lab2-num/lisp/: exp1.lisp  overflow.lisp
lab2-num/lisp/: exp1.lisp  overflow.lisp  sqpolyroot.lisp
lab3-primit/: lab3.code-workspace
lab3-primit/c/: bool-char.c  digit.c  enum.c
lab3-primit/haskell/: bool.hs  enum.hs  ostypeBool.hs  ostypeEnum.hs  pltypeBool.hs  pltypeEnum.hs
lab3-primit/java/: BoolChar.java  Digit.java  Enume.java  OSTypeBool.java  OSTypeEnum.java  PLTypeBool.java  PLTypeEnum.java  UnicodeLength.java
lab3-primit/lisp/: bool.lisp  enum.lisp  ostype.lisp  pltype.lisp
lab4-records/: lab4.code-workspace
lab4-records/ada/: README-ada  accom.adb  recordtest.adb  ttt.adb  uniontest.adb
lab4-records/c/: recordtest.c  uniontest.c
lab4-records/haskell/: accom.hs  lab4-haskell.cabal  recordtest.hs  ttt.hs  tupletest.hs  uniontest.hs
lab4-records/java/: UnionTest.java  accom.java  ttt.java
lab4-records/lisp/: accom.lisp  ttt.lisp  uniontest.lisp
lab5-collections/: lab5.code-workspace
lab5-collections/haskell/: accomColl.hs  lab5-haskell.cabal  tttColl-lens.hs  tttColl.hs
lab5-collections/java/: accomColl.java  tttColl.java  tttCollNotes.java
lab5-collections/python/: accomColl.py  tttColl.py
lab6-rectypes/: lab6.code-workspace
lab6-rectypes/c/: README-c  arith-slides.c  arith.c  table.c
lab6-rectypes/haskell/: arith.hs  lab6-haskell.cabal  table-lenses.hs  table-seq.hs  table.hs
lab6-rectypes/html/: ttt.html
lab6-rectypes/java/: ArithExp.java  ArithExpBinary.java  ArithExpDouble.java  ArithExpInt.java  ArithExpMinMax.java  README-java  Table.java  Test.java
lab6-rectypes/lisp/: arith.lisp  untypedtree.lisp
lab6-rectypes/prolog/: arith.prolog  difflist.prolog  difflists.prolog  table.prolog
lab7-vars/: lab7.code-workspace
lab7-vars/ada/: accomroomsize.adb  compile-run-ada.sh  cparray.adb  tttranges.adb  vars.adb
lab7-vars/c/: compile-run-c.sh  vars.c  withoutpointers.c
lab7-vars/haskell/: accomRoomSize.hs  lab7-haskell.cabal  stack.yaml  tttScopes.hs  vars.hs
lab7-vars/java/: A.java  CpArray.java  Vars.java  accomRoomSize.java  tttScopes.java
lab7-vars/lisp/: accomRoomSize.lisp  tttScopes.lisp  vars.lisp
lab7-vars/python/: vars.py
lab8-subprg/: lab8.code-workspace
lab8-subprg/ada/: aliasing.adb  flow.adb  swaptest.adb  tttsubprg.adb
lab8-subprg/c++/: README-cpp  compile-run-cpp.sh  flow.cpp  higherorder.cpp  swap.c  swap.cpp
lab8-subprg/haskell/: higherorder.hs  lab8-haskell.cabal  referentialtransparency.hs
lab8-subprg/java/: Flow.java  HigherOrder.java  HigherOrder8.java  Reftrans.java  Subprg.java  SwapTest.java
lab8-subprg/python/: higherorder.py
lab9-sync/: lab9.code-workspace
lab9-sync/ada/: balance.adb  balance.ads  balance_test.adb  bubble.adb  bubble.ads  bubble_test.adb  rendezvous.adb  rendezvous2.adb  start_stop.adb  start_stop.ads  start_stop0.adb  start_stop0.ads  start_stop_test.adb  start_stop_test0.adb
lab9-sync/erlang/: compare_signals.erl  start_stop.erl
lab9-sync/go/: startstop.go
lab9-sync/haskell/: Balance.hs  Bubble.hs  StartStop.hs  StartStop0.hs  lab9-haskell.cabal
lab9-sync/java/: Balance.java  Bubble.java  StartStop.java  StartStop0.java
scripts/: README-c  README-elm  compile-run-ada.sh  compile-run-java-many-files.sh
u10-modules/: u10.code-workspace
u10-modules/ada/: inherit.adb  people.adb  people.ads  peoplegeneric.adb  peoplegeneric.ads  usepeople.adb  usepeoplegeneric.adb
u10-modules/c++/: README-cpp  peoplegeneric.cpp  peoplegeneric.h  usepeoplegeneric.cpp
u10-modules/java/: A.java  compile-run-java.sh
u11-reliab/: u11.code-workspace
u11-reliab/ada/: arrayremove.adb  arrayremove.ads  arrayremovetest.adb
u11-reliab/java/: .gitignore  ArrayRemove.java  ArrayRemoveTest.java  pom.xml
u11-reliab/spark2005/: arrayremovespark.adb  arrayremovespark.ads  arrayremovespark.lst  arrayremovespark.smf
u11-reliab/spark2005/arrayremovespark/: arrayremove.fdl  arrayremove.rls  arrayremove.siv  arrayremove.slg  arrayremove.vcg
u11-reliab/spark2014/src/: arrayremovespark.adb  arrayremovespark.ads  main.adb
