name:                lab2-haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       base
  exposed-modules:     Modulo

executable lab2-haskell-nobounds
  hs-source-dirs:      .
  main-is:             nobounds.hs
  build-depends:       base

executable lab2-haskell-risingprec
  hs-source-dirs:      .
  main-is:             risingprec.hs
  build-depends:       base, hmpfr

executable lab2-haskell-intervals
  hs-source-dirs:      .
  main-is:             intervals.hs
  build-depends:       base, aern2-mp
