name:                lab6-haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable lab6-haskell-arith
  hs-source-dirs:      .
  main-is:             arith.hs
  build-depends:       base

executable lab6-haskell-table
  hs-source-dirs:      .
  main-is:             table.hs
  build-depends:       base

executable lab6-haskell-table-seq
  hs-source-dirs:      .
  main-is:             table-seq.hs
  build-depends:       base, containers

executable lab6-haskell-table-lenses
  hs-source-dirs:      .
  main-is:             table-lenses.hs
  build-depends:       base, lens

