name:                lab8-haskell
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable lab8-haskell-referentialtransparency
  hs-source-dirs:      .
  main-is:             referentialtransparency.hs
  build-depends:       base

executable lab8-haskell-higherorder
  hs-source-dirs:      .
  main-is:             higherorder.hs
  build-depends:       base

